--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 塞浦路斯-792.9KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇭🇰 香港-886.1KB/s(Youtube:不良林), server: 148.66.56.99, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.82MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-713.8KB/s(Youtube:不良林), server: 194.124.35.48, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.10MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.11MB/s(Youtube:不良林), server: 134.195.196.150, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-792.5KB/s(Youtube:不良林), server: chunchuan-02.aikala.shop, port: 80, type: vmess, uuid: a6d2838b-1027-4800-b664-16840d156d62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: chunchuan-02.aikala.shop}}
+  - {name: 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.150, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.150, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.150, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 塞浦路斯-792.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 塞浦路斯-792.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 塞浦路斯-792.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 塞浦路斯-792.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 塞浦路斯-792.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 塞浦路斯-792.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 塞浦路斯-792.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-886.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
