--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-231.0KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.79MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
+  - {name: 🇸🇬 新加坡-435.7KB/s(Youtube:不良林), server: 194.124.35.40, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇬🇧 英国-3.10MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.11MB/s(Youtube:不良林), server: 134.195.196.150, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-792.5KB/s(Youtube:不良林), server: chunchuan-02.aikala.shop, port: 80, type: vmess, uuid: a6d2838b-1027-4800-b664-16840d156d62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: chunchuan-02.aikala.shop}}
-  - {name: 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.150, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.150, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.150, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2, server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-231.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-435.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-231.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-435.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-231.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-435.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-231.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-435.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-231.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-435.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-231.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-435.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-231.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-435.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-792.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
