--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.97MB/s(Youtube:不良林), server: 134.195.196.150, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇰🇷 韩国-2.79MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.91MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇭🇰 香港-1.99MB/s(Youtube:不良林), server: 148.66.56.99, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.150, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2, server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
-  - {name: 🇺🇸 美国-4.19MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.150, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇸🇬 新加坡-4.93MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625tw.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.150, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇭🇰 香港-1.62MB/s(Youtube:不良林), server: 148.66.56.99, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-356.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-309.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-343.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-327.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-322.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-349.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
