--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-901.6KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.150, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇸🇬 新加坡-356.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.150, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-3.16MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-327.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-2.73MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇸🇬 新加坡-309.9KB/s(Youtube:不良林), server: 194.124.35.40, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
